force-app/main/default/objects/Supply__c/Supply__c.object-meta.xml
<CustomObject>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track Geekwise Supplies (Loaner Laptops, etc)</description>
    <label>Supply</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>