force-app/main/default/objects/Supply__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A place to store vendor information</description>
    <inlineHelpText>A place to store vendor information</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplies (Account)</relationshipLabel>
    <relationshipName>Supplies1</relationshipName>
    <type>Lookup</type>
</CustomField>