force-app/main/default/objects/Supply__c/fields/Business_Discount__c.field-meta.xml
<CustomField>
    <fullName>Business_Discount__c</fullName>
    <label>Business Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>