force-app/main/default/objects/Supply__c/fields/Combination__c.field-meta.xml
<CustomField>
    <fullName>Combination__c</fullName>
    <description>The lock combination needed to unlock it.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the combination to unlock this lock?</inlineHelpText>
    <label>Combination</label>
    <length>15</length>
    <type>Text</type>
</CustomField>