force-app/main/default/objects/Supply__c/fields/Computer_Price__c.field-meta.xml
<CustomField>
    <fullName>Computer_Price__c</fullName>
    <formula>Original_Equipment_Price__c - Business_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Computer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>