force-app/main/default/objects/Supply__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track where Geekwise Supplies are checked out to.
Populated: Manually</description>
    <label>Checked Out By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>