force-app/main/default/objects/Supply__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>