force-app/main/default/objects/Supply__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Created By: NH
Business Unit: BLDG Design Users
Purpose: To Track the cost of Supplies.</description>
    <inlineHelpText>The cost of the item.</inlineHelpText>
    <label>Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>