force-app/main/default/objects/Supply__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users, Hashtag Users
Purpose: Add notes to individual supply records
Populated: Manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>