force-app/main/default/objects/Supply__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <description>Created by CF
Business Unit IT
Purpose : To track operating system of laptops purchased by and loaned to BW staff, apprentices, WFT students.</description>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MacOS</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>