force-app/main/default/objects/Supply__c/fields/Original_Equipment_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Equipment_Price__c</fullName>
    <label>Original Equipment Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>