force-app/main/default/objects/Supply__c/fields/Serial_Num__c.field-meta.xml
<CustomField>
    <fullName>Serial_Num__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To identify supplies
Populated: Manually</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Serial #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>