force-app/main/default/objects/Supply__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A space the supplies are designated for.</inlineHelpText>
    <label>Space</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>