force-app/main/default/objects/Supply__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track if Geekwise Supplies are checked out.
Populated: Manually/Triggered by Process when assigned to a contact/contact removed.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
                <default>true</default>
                <label>Ordered</label>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Checked Out</fullName>
            </value>
            <value>
                <fullName>Needs Repair</fullName>
            </value>
            <value>
                <fullName>In Repair</fullName>
            </value>
            <value>
                <fullName>Out of Commission</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>