force-app/main/default/objects/Supply__c/fields/Supply_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Supply_Purchase__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By: NH
Business Unit: BLDG Design Users
Purpose: To identify what item is associated with the Supply Purchase object</description>
    <label>Supply Purchase</label>
    <referenceTo>Supply_Purchase__c</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>