force-app/main/default/objects/Supply__c/fields/Support_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Expiration_Date__c</fullName>
    <description>Created by CF
Purpose : Track support expiration date on supplies</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Support Expiration Date</label>
    <type>Date</type>
</CustomField>