force-app/main/default/objects/Supply__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track what kind of device Geekwise Supplies are. More options to be added later.
Populated: Manually</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Dongle (Adapter)</fullName>
            </value>
            <value>
                <fullName>iPads</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Laptop Stand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Office Keys</fullName>
                <isActive>false</isActive>
                <label>Office Keys</label>
            </value>
            <value>
                <fullName>Parking Pass</fullName>
                <isActive>false</isActive>
                <label>Parking Pass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>