force-app/main/default/objects/Supply__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By: NH
Business Unit: BLDG Design Users
Purpose: To identify what vendor is associated with the Supply Purchase object</description>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>