force-app/main/default/objects/Supply__c/recordTypes/BLDG_Design.recordType-meta.xml
<RecordType>
    <fullName>BLDG_Design</fullName>
    <active>true</active>
    <label>BLDG Design</label>
</RecordType>