force-app/main/default/objects/Supply__c/recordTypes/Geekwise_Supplies.recordType-meta.xml
<RecordType>
    <fullName>Geekwise_Supplies</fullName>
    <active>true</active>
    <label>Geekwise Supplies</label>
</RecordType>