force-app/main/default/objects/Supply__c/recordTypes/Lock.recordType-meta.xml
<RecordType>
    <fullName>Lock</fullName>
    <active>true</active>
    <description>A lock with a combination to be used on a reservable locker.</description>
    <label>Lock</label>
</RecordType>