force-app/main/default/objects/Supply__c/recordTypes/WFT_Supply.recordType-meta.xml
<RecordType>
    <fullName>WFT_Supply</fullName>
    <active>true</active>
    <label>WFT Supply</label>
</RecordType>