force-app/main/default/objects/Supply__c/listViews/Cowork_Locks.listView-meta.xml
<ListView>
    <fullName>Cowork_Locks</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Supply__c.Lock</value>
    </filters>
    <label>Cowork Locks</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>