force-app/main/default/objects/Supply__c/listViews/HR_Supplies.listView-meta.xml
<ListView>
    <fullName>HR_Supplies</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Lease_Start_Date__c</columns>
    <columns>Lease_End_Date__c</columns>
    <columns>Serial_Num__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Supply__c.HR</value>
    </filters>
    <label>HR - Supplies</label>
    <sharedTo>
        <group>HR_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>