force-app/main/default/objects/Supply__c/listViews/WFT_Supplies.listView-meta.xml
<ListView>
    <fullName>WFT_Supplies</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Serial_Num__c</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Supply__c.WFT_Supply</value>
    </filters>
    <label>WFT Supplies</label>
    <sharedTo>
        <group>Tech_Support_Team</group>
        <group>VP_Team</group>
        <group>WFT_Instructor_Team</group>
        <group>WFT_TA_Team</group>
        <group>Workforce_Training_Team</group>
    </sharedTo>
</ListView>